# Mary-Lang

./: .gitignore  LICENSE  Mary-Lang.sln  README.md  grammar_sll
Examples/: ClassStrInterpol.mj
Mary-Lang/: CMakeLists.txt  Mary-Lang.vcxproj  Mary-Lang.vcxproj.filters  Mary.cpp
Mary-Lang/AbstractSyntaxTree/: AST.hpp  ASTFactory.hpp  Declaration.hpp  Expression.hpp  List.hpp  Statement.hpp  Types.hpp
Mary-Lang/Parser/: Parser.cpp  Parser.hpp
Mary-Lang/Scanner/: Scanner.cpp  Scanner.hpp  tokens.cpp  tokens.hpp
Mary-Lang/Utils/: Diagnostics.hpp  Memory.hpp  Position.hpp  Utils.hpp
UnitTest/: UnitTest.vcxproj
